# personal-financial-management-assistant

./: .env.docker  .gitignore  CLAUDE.md  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  deploy.sh  docker-compose.yml  vercel.json
.claude/: settings.local.json
.postman/: resources.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  migrate_wechat_constraint.py  pyproject.toml  repair_transaction_categories.py  test.py
backend/app/: __init__.py
backend/app/api/: __init__.py  accounts.py  ai.py  auth.py  balance_history.py  budgets.py  categories.py  health.py  metrics.py  reminders.py  reports.py  reports_temp.py  statistics.py  transactions.py  wechat_bill.py
backend/app/config/: __init__.py  database.py  redis.py  settings.py
backend/app/core/: __init__.py  dependencies.py  exceptions.py  metrics.py  rate_limiter.py  security.py
backend/app/models/: __init__.py  account.py  ai_advice_record.py  balance_history.py  budget.py  category.py  import_log.py  reminder.py  transaction.py  user.py
backend/app/schemas/: __init__.py  account.py  ai.py  balance_history.py  budget.py  category.py  common.py  reminder.py  statistics.py  transaction.py  user.py  wechat_bill.py
backend/app/services/: __init__.py  ai_service.py  category_service.py  wechat_bill_service.py
backend/app/utils/: logger.py
backend/tests/: conftest.py  test_accounts.py  test_ai.py  test_ai_api.py  test_ai_budget.py  test_categories.py  test_reminders.py  test_reports.py  test_services.py
docs/: ai-features.md  api-remaining-plan.md  api.md  (+14 more)
(+109 files in other folders)
