[project]
name = "finance-backend"
version = "1.0.0"
description = "智能个人财务记账系统后端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "openpyxl>=3.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "email-validator>=2.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "bcrypt==3.2.0",
    "chardet>=7.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
